# meta-openenv-freeguy

./: Dockerfile  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train_baseline.py
envs/free_guy/: client.py  models.py  tasks.py
envs/free_guy/server/: app.py  environment.py
server/: app.py
